--- a/review1_drones2026-02/drones-4134001-done-x_version1/drones-4134001-done.tex
+++ b/review1_drones2026-02/drones-4134001-done-x_version1/drones-4134001-done.tex
@@ -252,7 +252,7 @@ In this paper, we present the technical details of this new tool, followed by fo
 The general workflow of \textsc{drone2report} is reported in Figure~\ref{fig:workflow}. 
 We adopt here the following definitions: orthophotos (or orthorectified images) are single drone-captured images that have been geometrically corrected (perspective, camera tilt etc.), while orthomosaics are collection of orthophotos stitched together (taking care of overlaps etc.) \cite{park2022deep}.
 The first step is data acquisition, with the drone(s) flying over the field of interest and collecting a series of overlapping images, which are then collated together into an orthomosaic. This computational step produces a georeferenced composite image and corrects for several technical issues such as perspective distortion, map projection, and lens aberrations.
-The generation of orthophotos and orthomosaics is now considered a well-established process, thanks to the availability of mature open-source tools such as OpenDroneMap \cite{noauthor_welcome_nodate}, MicMac \cite{rupnik2017micmac}, and COLMAP\cite{schoenberger2016sfm}. 
+The generation of orthophotos and orthomosaics is now considered a well-established process, thanks to the availability of mature open-source tools such as OpenDroneMap \cite{noauthor_welcome_nodate}, MicMac \cite{rupnik2017micmac}, and COLMAP \cite{schoenberger2016sfm}. 
 %and Agisoft Metashape version 1.6.4 (Agisoft LLC., St. Petersburg, Russia), for orthorectiphication . 
 Together with the orthomosaic image (typically in the .tif format), a digital elevation model (DEM) file is also produced, which describes the three-dimensional structure of the field.
 
@@ -321,7 +321,8 @@ shapes_file=${DEFAULT:infolder}/<img.shp>
 shapes_index=id
 
 [TASK indices]
-#this section tells DRONE2REPORT to compute two indices: GLI and HUE
+#this section tells DRONE2REPORT to compute 
+#two indices: GLI and HUE
 active=True
 outfolder=${DEFAULT:outfolder}/<results>
 indices=GLI,HUE
