--- a/review1_drones2026-02/drones-4134001-done-x_version1/drones-4134001-done.tex
+++ b/review1_drones2026-02/drones-4134001-done-x_version1/drones-4134001-done.tex
@@ -502,7 +502,7 @@ From the DEM files also the per-plot volumes can be estimated using \textsc{dron
 
 \subsection{Case Study N. 4: Index Optimization on Images Merged from  Heterogeneous Sensors}
 
-\textsc{drone2report} can transparently import images from different sensors and merge them into a single data structure where all channels of the original images are stacked. For example, it is possible to merge images coming from visible wavelength (e.g. RGB images), from sensors in the non-visible wavelength (e.g. infra-red and near-infra-red images) and from thermal cameras. Differences in image resolutions are managed automatically via cubic interpolation. Differences in spatial reference system (SRS) are handled via reprojection of all data into the reference taken from the first input orthomosaic. ROIs are taken from the single shape file (common to all orthomosaics).
+\textsc{drone2report} can transparently import images from different sensors and merge them into a single data structure where all channels of the original images are stacked. For example, it is possible to merge images coming from visible wavelengths (e.g. RGB images), from sensors in the non-visible wavelength (e.g. infra-red and near-infra-red images) and from thermal cameras. Differences in image resolutions are managed automatically via cubic interpolation. Differences in spatial reference system (SRS) are handled via reprojection of all data into the reference taken from the first input orthomosaic. ROIs are taken from the single shape file (common to all orthomosaics).
 
 The resulting data structure exposes, for each pixel, a number of channels equal to the sum of all channels of the original images. Thus, it is possible to leverage different data sources together and transparently.
 
@@ -568,7 +568,7 @@ The majority of open-source/freeware software packages for UAV-imagery processin
 
 \textit{Orfeo ToolBox} (OTB: \url{https://gitlab.orfeo-toolbox.org/}, \cite{noauthor_orfeo_nodate, grizonnet_orfeo_2017}) is a general-purpose remote sensing library that offers state-of-the-art algorithms via command-line apps, Python bindings and QGIS integration, making it highly flexible for classification, segmentation and raster math. Yet OTB is intentionally low-level: users compose pipelines themselves and must implement domain-specific phenotyping logic (e.g., plot masks, trial layouts, multi-sensor co-registration, batch reporting). 
 
-\textit{QGIS} (\url{https://qgis.org/}, \cite{moyroud2018introduction}) is a free and open-source desktop geographic information system (GIS) suite. It allows users to create, edit, visualize, analyze, and publish geospatial information. In particular, QGIS provides a Processing Modeler \cite{dobesova2020evaluation} for chaining algorithms and running them in batch, which can partially address reproducibility. In practice, model portability, parameter/version management, and experiment-level reporting remain challenging, especially across groups and compute environments.
+\textit{QGIS} (\url{https://qgis.org/}, \cite{moyroud2018introduction}) is a free and open-source desktop geographic information system (GIS) suite. It allows users to create, edit, visualize, analyze, and publish geospatial information. In particular, QGIS provides a Processing Modeler \cite{dobesova2020evaluation} for chaining algorithms and running them in batch, which can partially address reproducibility. In practice, model portability, parameter/version management, and experiment-level reporting remain challenging, especially across groups and computer environments.
 
 \textit{PlantCV} (\url{https://plantcv.org/}, \cite{noauthor_plantcv_2021}) is a widely used, open-source platform for modular image analysis in plant science, particularly effective for close-range/greenhouse imagery and single-image pipelines. It is commonly run using Jupyter notebooks. It is not primarily oriented to georeferenced orthomosaics,  or plot-level analysis.
 
