edited: section on limitations and future developments

--- a/review1_drones2026-02/drones-4134001-done-x_version1/drones-4134001-done.tex
+++ b/review1_drones2026-02/drones-4134001-done-x_version1/drones-4134001-done.tex
@@ -593,13 +593,13 @@ As other highly specialised tools, \textit{Berryportraits} only works with RGB i
 
 In contrast to most of the above solutions, \textsc{drone2report} has been developed specifically to streamline the processing of UAV-captured images for the calculation of vegetation indices and the reporting of relevant summary statistics.
 It is designed to sit after the orthomosaic generation (e.g. from ODM/WebODM or commercial tools) and provides a configuration-driven, reproducible pipeline that takes in input and multiband image (being it RGB, multispectral, thermal images and DEM files).  Its core functionalities include: i) identifying regions of interests (ROIs, based on the shape file); ii) calculating vegetation indices; iii) thresholding; iv) summarising statistics; v) generating thumbnails.
-Moreover, the software is open source and freely (and easily) customizable.
+%Moreover, the software is open source and freely (and easily) customizable.
 
 The software is open-source, easily customizable, and designed for batch processing via a single configuration file (in \texttt{.ini} format). It runs entirely via the command line (no GUI dependency), ensuring platform independence and reproducibility across labs and servers. Dependencies are managed through a Conda environment, simplifying installation and portability.
 
 A distinctive feature of \textsc{drone2report} is its support for multi-sensor alignment and combined index generation, with built-in resampling and spatial reference system (SRS) management. This enables new analyses that leverage data from multiple sources—an emerging need in precision agriculture. Moreover, the tool emphasizes robust validation and reporting, with support for dry runs and standardized outputs per ROI, ready for integration into statistical workflows.
 
-In short, while \textit{ODM/WebODM} specializes in map making, \textit{OTB} and \textit{QGIS} provide low-level building blocks, \textit{GRABSEEDS} and \textit{BerryPortraits} occupy specific application niches, \textit{GRID} and \textit{PREPs} offer flexible segmentation functionalities, and \textit{PlantCV} and \textit{FIELDimageR} target image-centric or R-centric workflows, \textsc{drone2report} contributes a domain-specific, geospatial, configuration-driven bridge from orthomosaics to plot-level, multi-sensor, repeatable reports tailored to field phenotyping. Moreover, drone2report can easily integrate heterogeneous predictive models, such as deep neural networks, with minimal code adaptation.
+In short, while \textit{ODM/WebODM} specializes in producing sophisticated digital outputs from raw UAV-imagery data, \textit{OTB} and \textit{QGIS} provide low-level building blocks, \textit{GRABSEEDS} and \textit{BerryPortraits} occupy specific application niches, \textit{GRID} and \textit{PREPs} offer flexible segmentation functionalities, and \textit{PlantCV} and \textit{FIELDimageR} target image-centric or R-centric workflows, \textsc{drone2report} contributes a domain-specific, geospatial, configuration-driven bridge from orthomosaics to plot-level, multi-sensor, repeatable reports tailored to field phenotyping. Moreover, drone2report can easily integrate heterogeneous predictive models, such as deep neural networks, with minimal code adaptation.
 
 \subsection{Applications, Limitations and Future Developments}
 
@@ -615,7 +615,7 @@ Additionally, \textsc{drone2report} offers ample extendibility allowing users to
 There are of course a few limitations that need to be pointed out. 
 First of all, there is no graphical interface (GUI), which may pose a barrier for users unfamiliar with command-line tools. This, however, was a design choice, since the tool was developed as part of a larger, server-based pipeline.
 
-In conclusion, \textsc{drone2report} is a new software tool designed to support repeatable, scalable, and multi-sensor UAV data analysis in agricultural field trials, and is going to be of great use and help for the scientific and technical community in precision agriculture and beyond. By focusing on vegetation index calculation, ROI-level analytics, and reproducible reporting, it fills a critical methodological gap between raw imagery and downstream statistical analysis. Its design makes it a valuable asset not only for researchers in precision agriculture, but also for broader applications such as forestry, land-use monitoring, and environmental surveys.
+In conclusion, \textsc{drone2report} is a new software tool designed to support repeatable, scalable, and multi-sensor UAV data analysis in agricultural field trials, and is going to be of great use and help for the scientific and technical community in precision agriculture and beyond. By focusing on vegetation index calculation, ROI-level analytics, and reproducible reporting, it fills a critical methodological gap between orthophotos/orthomosaic and downstream statistical analysis. Its design makes it a valuable asset not only for researchers in precision agriculture, but also for broader applications such as forestry, land-use monitoring, and environmental surveys.
 
 \vspace{6pt}
 
